[build-system]
requires = ["hatchling"]
build-backend = "hatchling.buildi"

[project]
name = "enuma"
version = "0.0.1"
authors = [
  { name="qz844", email="zq17122320@gmail.com" },
]
description = "A small example package"
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://https://github.com/ColdSnaap/enuma"

